# ignis

./: Cargo.toml  LICENCE  README.md  ignis.toml.example  install.bat  install.sh
core/: Cargo.toml
core/src/: builder.rs  cli.rs  command.rs  config.rs  dependency_graph.rs  editor.rs  executor.rs  lib.rs  logger.rs  monitor.rs  stage.rs  stage_context.rs  stage_runner.rs  target.rs
core/src/history/: mod.rs  storage.rs
core/src/parser/: entry.rs  filters.rs  mod.rs  parser.rs
core/src/tui/: app.rs  input.rs  keybinding_manager.rs  mod.rs  vim.rs
core/src/tui/tabs/: console.rs  history.rs  mod.rs  performance.rs  summary.rs  warnings.rs
src/: main.rs
