[package]
name = "ignis-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "ignis_core"
path = "src/lib.rs"

[[bin]]
name = "ignis"
path = "../src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.3"
shellexpand = "3.1"
atty = "0.2"
sysinfo = "0.30"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
tempfile = "3.10"
